--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -6,6 +6,7 @@ $teal: #39cccc
 $green: #2ecc40
 $olive: #3d9970
 $lime: #01ff70
+$forestGreen:#4d671b
 
 // Warm colors
 $yellow: #ffdc00
@@ -21,7 +22,7 @@ $silver: #dddddd
 $gray: #aaaaaa
 $black: #111111
 
-$main-background-color: $white
+$main-background-color: $forestGreen
 $main-text-color: $black
 $divider-color: rgba($black, .14)
 
