--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -9,16 +9,27 @@ html,
 body
   height: 100%
   overflow-x: hidden
+  margin: 0
 
 body 
   position: relative
-  margin: 0
+  display: grid
+  grid-gap: 10px
+  grid-template-columns: 1fr
+  grid-template-areas: "main" "footer"
+  grid-template-rows: 1fr 80px
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
   color: $main-text-color
   background-color: $main-background-color
   font-size: $main-text-size
+
+main
+  grid-area: main
+
+footer
+  grid-area: footer
 
 code 
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace
