created UI for login page. Added additional route and initial component for user dashboard

--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -6,7 +6,7 @@ $teal: #39cccc
 $green: #2ecc40
 $olive: #3d9970
 $lime: #01ff70
-$forestGreen:#4d671b
+$darkOlive:#879169
 
 // Warm colors
 $yellow: #ffdc00
@@ -15,6 +15,7 @@ $red: #ff4136
 $fuchsia: #f012be
 $purple: #b10dc9
 $maroon: #85144b
+$sand:#ab946b
 
 // Grayscale
 $white: #ffffff
@@ -22,7 +23,7 @@ $silver: #dddddd
 $gray: #aaaaaa
 $black: #111111
 
-$main-background-color: $forestGreen
+$main-background-color: $darkOlive
 $main-text-color: $black
 $divider-color: rgba($black, .14)
 
