--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -30,6 +30,21 @@ main
 
 footer
   grid-area: footer
+  width: 100%
 
+div.footer-container
+  display: flex
+  flex-direction: row
+  place-content: space-evenly
+
+div.footer-container-links
+  display: flex
+  place-content: space-evenly
+  width: 23%
+
+div.footer-container-copyright
+  display: flex
+  place-content: space-evenly
+  width: 33%
 code 
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace
